# openmeteo-mcp

./: .env.example  LICENSE  README.md  pyproject.toml
src/: _client.py  client.py  main.py  openmeteo.py  server.py  smoke.py
tests/: test_mcp_server.py  test_openmeteo.py
